Blender 2.8 crashes upon creating material in OpenGL mode #56239

Closed
opened 2018-08-05 12:10:54 +02:00 by Petra Mogyorósi · 13 comments

System Information
Pisi Linux 2.0 (x86_64) with AMD Radeon HD 833 with xorg-video-radeon driver
Error is also reproducible on Windows 10 Pro x86_64/AMD Radeon RX580 4GB with Radeon Software 18.8.1

Blender Version
Broken: 2.8 Alpha

Short description of error
Blender 2.8 crashes in OpenGL model whenever a new material slot is added and a new material is created in the slot.
Exact steps for others to reproduce the error
Load a .blend (the default cube will do it, too)
Set rendering to OpenGL
Unlink a material from an object
Add new material to the same object

blendrun.txt
test.blend
system-info.txt
test.crash.txt

EDIT:It looks like my system installed Nouveau by default. Will run experiment again with official drivers.
Pisi Linux seems to pre-install Nouveau by default, regardless of GPU type.

**System Information** Pisi Linux 2.0 (x86_64) with AMD Radeon HD 833 with xorg-video-radeon driver Error is also reproducible on Windows 10 Pro x86_64/AMD Radeon RX580 4GB with Radeon Software 18.8.1 **Blender Version** Broken: 2.8 Alpha **Short description of error** Blender 2.8 crashes in OpenGL model whenever a new material slot is added and a new material is created in the slot. **Exact steps for others to reproduce the error** Load a .blend (the default cube will do it, too) Set rendering to OpenGL Unlink a material from an object Add new material to the same object [blendrun.txt](https://archive.blender.org/developer/F4168455/blendrun.txt) [test.blend](https://archive.blender.org/developer/F4168458/test.blend) [system-info.txt](https://archive.blender.org/developer/F4168465/system-info.txt) [test.crash.txt](https://archive.blender.org/developer/F4168474/test.crash.txt) EDIT:~~It looks like my system installed Nouveau by default. Will run experiment again with official drivers.~~ Pisi Linux seems to pre-install Nouveau by default, regardless of GPU type.

Added subscriber: @MiceAreVeryNice

Added subscriber: @MiceAreVeryNice

Added subscriber: @mont29

Added subscriber: @mont29

Cannot confirm any crash here, Please:

  • Give us your exact Blender, OS and GPU (including drivers) versions, as requested in the template!
  • Ensure both your OS and drivers are fully up-to-date (and use official GPU drivers, not those provided by windows or tablet/laptop maker or open source ones in linux distributions).
  • Try the latest build from our buildbot.
  • Try to start Blender in factory settings (--factory-startup commandline option) (this will ensure whether this is a userpref or addon issue or not).
  • Try to tweak OGL settings in UserPreferences, System tab.
  • Try to tweak your GPU driver settings (e.g. try different values between 'performance' and 'quality' if you have such slider, etc.).
  • Attach as text file here the report generated by Help -> System Info (do not paste it directly in comment).
  • Launch Blender from the command line with --debug-gpu option and attach as text file here any error printed out in the console (do not paste it directly in comment).
  • Try to start in software OpenGL mode (use the blender-softwaregl distributed with official blender, will be slow, but will show whether this is a driver issue or not).
Cannot confirm any crash here, Please: * Give us your exact Blender, OS and GPU (including drivers) versions, as requested in the template! * Ensure both your OS and drivers are fully up-to-date (and use official GPU drivers, not those provided by windows or tablet/laptop maker or open source ones in linux distributions). * Try the latest build from [our buildbot](https://builder.blender.org/download). * Try to start Blender in factory settings (`--factory-startup` commandline option) (this will ensure whether this is a userpref or addon issue or not). * Try to tweak OGL settings in UserPreferences, System tab. * Try to tweak your GPU driver settings (e.g. try different values between 'performance' and 'quality' if you have such slider, etc.). * **Attach as text file** here the report generated by Help -> System Info (**do not** paste it directly in comment). * Launch Blender from the command line with `--debug-gpu` option and **attach as text file** here any error printed out in the console (**do not** paste it directly in comment). * Try to start in software OpenGL mode (use the `blender-softwaregl` distributed with official blender, will be slow, but will show whether this is a driver issue or not).

Added subscriber: @s12a

Added subscriber: @s12a

I could reproduce on Blender 2.80 (sub 21), Commit date: 2018-08-06 19:55, Hash faf43ff9ad with:

  • Windows 10 Pro x64 (1803)
  • AMD Radeon RX580 4GB with Radeon Software 18.8.1

I have provided .blend file already setup to OpenGL render engine and output from a debug build.

unlink.blend
console-output.txt
unlink.crash.txt

Click X (unlink), then click the large "New" button. The program ends with a runtime error afterwards, or crashes.

image.png
image.png

I could reproduce on Blender 2.80 (sub 21), Commit date: 2018-08-06 19:55, Hash faf43ff9ad8 with: - Windows 10 Pro x64 (1803) - AMD Radeon RX580 4GB with Radeon Software 18.8.1 I have provided .blend file already setup to OpenGL render engine and output from a debug build. [unlink.blend](https://archive.blender.org/developer/F4142811/unlink.blend) [console-output.txt](https://archive.blender.org/developer/F4142810/console-output.txt) [unlink.crash.txt](https://archive.blender.org/developer/F4142809/unlink.crash.txt) Click X (unlink), then click the large "New" button. The program ends with a runtime error afterwards, or crashes. ![image.png](https://archive.blender.org/developer/F4142814/image.png) ![image.png](https://archive.blender.org/developer/F4142819/image.png)

This error can be reproduced by adding and creating any new material in OpenGL mode. I retested this with today's build (hash 6fbd210b91, x64)
system-info.txt
test.crash.txt
test.blend
blendrun.txt

This error can be reproduced by adding and creating any new material in OpenGL mode. I retested this with today's build (hash 6fbd210b915, x64) [system-info.txt](https://archive.blender.org/developer/F4161577/system-info.txt) [test.crash.txt](https://archive.blender.org/developer/F4161661/test.crash.txt) [test.blend](https://archive.blender.org/developer/F4161666/test.blend) [blendrun.txt](https://archive.blender.org/developer/F4161670/blendrun.txt)
Petra Mogyorósi changed title from Blender 2.8 crashes upon changing material to Blender 2.8 crashes upon creating material in OpenGL mode 2018-08-08 22:55:59 +02:00

Added subscriber: @JKVargas

Added subscriber: @JKVargas

Hey guys, I am new to blender development.
But I found out that when in opengl rendering mode, while inside the external_engine.c's RE_engine_render(...) the render->result is not being set because the render->scemode has R_BUTS_PREVIEW;

Now if someone can explain to me what scemode does and what's its purpose, or some englighment would be nice.

)

Hey guys, I am new to blender development. But I found out that when in opengl rendering mode, while inside the external_engine.c's RE_engine_render(...) the render->result is not being set because the render->scemode has R_BUTS_PREVIEW; Now if someone can explain to me what scemode does and what's its purpose, or some englighment would be nice. # )

In #56239#525484, @JKVargas wrote:
Hey guys, I am new to blender development.
But I found out that when in opengl rendering mode, while inside the external_engine.c's RE_engine_render(...) the render->result is not being set because the render->scemode has R_BUTS_PREVIEW;

Now if someone can explain to me what scemode does and what's its purpose, or some englighment would be nice.
=)

Is OpenGL mode an external renderer? I doubt it. The issue stands, no matter whether Rendered mode is on or not.
Please file a different bug report instead of offing in this thread.

> In #56239#525484, @JKVargas wrote: > Hey guys, I am new to blender development. > But I found out that when in opengl rendering mode, while inside the external_engine.c's RE_engine_render(...) the render->result is not being set because the render->scemode has R_BUTS_PREVIEW; > > Now if someone can explain to me what scemode does and what's its purpose, or some englighment would be nice. > =) Is OpenGL mode an external renderer? I doubt it. The issue stands, no matter whether Rendered mode is on or not. Please file a different bug report instead of offing in this thread.
Brecht Van Lommel self-assigned this 2018-08-09 11:34:58 +02:00

This issue was referenced by 0de50a98e3

This issue was referenced by 0de50a98e384012628ea38dfceebd99f64bcea47

@JKVargas is right about the cause of this bug, external_engine.c is a bit of a confusing name now that all renderers go through this system.

The OpenGL render engine does not currently support preview renders, so there is no render result. The solution is to avoid doing the preview render if the engine does not support it.

@JKVargas is right about the cause of this bug, external_engine.c is a bit of a confusing name now that all renderers go through this system. The OpenGL render engine does not currently support preview renders, so there is no render result. The solution is to avoid doing the preview render if the engine does not support it.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

I am sorry if I did something wrong hehe.
Like I say, I am new to this stuff... But I really want to help.
I found out that stuff because I was debugging.

I am going to check what was the solution.
But still, if you guys don't mind, can you explain me what render->scemode does? =)
Thanks and good job Brecht =)

I am sorry if I did something wrong hehe. Like I say, I am new to this stuff... But I really want to help. I found out that stuff because I was debugging. I am going to check what was the solution. But still, if you guys don't mind, can you explain me what render->scemode does? =) Thanks and good job Brecht =)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56239
No description provided.