Fix T56239: creating material crashes with OpenGL render engine selected.